--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Restourant</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="img/jpg" href="img/logo.jpg">
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C094LVVJ9Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-C094LVVJ9Q');
+    </script>
 
 
 </head>
